--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=noticeboard
+spring.data.redis.host=${noticeboard.db.host}
+spring.data.redis.port=${noticeboard.db.port}
+spring.data.redis.database=${noticeboard.db.database}
+spring.data.redis.username=${noticeboard.db.username}
+spring.data.redis.password=${noticeboard.db.password}
+noticeboard.db.host=localhost
+noticeboard.db.port=6379
+noticeboard.db.database=0
+noticeboard.db.username=
+noticeboard.db.password=
+server.port=8080
+
